creacion de modal educacion
botones de edicion y modal

--- a/Front_End/src/app/componentes/educacion/educacion.component.html
+++ b/Front_End/src/app/componentes/educacion/educacion.component.html
@@ -6,14 +6,14 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-           <a class="nav-link">Agregar Educacion <span class="sr-only">(current)</span></a>
+           <a class="nav-link" (click)="onOpenModal(null!, 'add')">Agregar Educacion <span class="sr-only">(current)</span></a>
         </li>
      </ul>
 
   </div>
 </nav>
 
-<div class="container">
+<div class="container" id="main-container">
     <div class="row">
         <div *ngFor="let educacion of educaciones" class="col-md-6 col-xl-3">
             <div class="card m-b-30">
@@ -28,43 +28,41 @@
                 </div>
                 <div class="card-body">
                     <div class="float-right btn-group btn-group-sm">
-                        <a class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
-                        <a class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
+                        <a (click)="onOpenModal(educacion, 'edit')" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
+                        <a (click)="onOpenModal(educacion, 'delete')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
                     </div>
                 </div>
             </div>
         </div>
 
 
-        <!-- Add Employee Modal -->
+<!-- Add Employee Modal -->
 <div class="modal fade" id="addEducacionModal" tabindex="-1" role="dialog" aria-labelledby="addEducacionModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
        <div class="modal-header">
           <h5 class="modal-title" id="addEducacionModalLabel">Add Educacion</h5>
-          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <button type="button" class="cerrar" data-dismiss="modal" aria-label="Cerrar">
           <span aria-hidden="true">&times;</span>
           </button>
        </div>
        <div class="modal-body">
           <form #addForm="ngForm" (ngSubmit)="onAddEducacion(addForm)">
           <div class="form-group">
-             <label for="name">institucion</label>
-             <input type="text" ngModel name="name" class="form-control" id="name" placeholder="Name" required>
+             <label for="institucion">Institucion</label>
+             <input type="text" ngModel name="institucion" class="form-control" id="institucion" placeholder="Institucion" required>
           </div>
           <div class="form-group">
-             <label for="email">especialidad</label>
-             <input type="email" ngModel name="email" class="form-control" id="email" placeholder="Email" required>
+             <label for="especialidad">especialidad</label>
+             <input type="especialidad" ngModel name="especialidad" class="form-control" id="especialidad" placeholder="Especialidad" required>
           </div>
           <div class="form-group">
-             <label for="phone">fechainicio</label>
-             <input type="text" ngModel name="jobTitle" class="form-control" id="jobTile" placeholder="Job title" required>
+             <label for="fechainicio">fechainicio</label>
+             <input type="text" ngModel name="fechainicio" class="form-control" id="fechainicio" placeholder="Fechainicio" required>
           </div>
           <div class="form-group">
-             <label for="phone">fechafin
-
-             </label>
-             <input type="text" ngModel name="phone" class="form-control" id="phone" placeholder="Phone" required>
+             <label for="phone">fechafin </label>
+           <input type="text" ngModel name="fechafin" class="form-control" id="fechafin" placeholder="Fechafin" required>
           </div>
           <div class="modal-footer">
              <button type="button" id="add-educacion-form" class="btn btn-secondary" data-dismiss="modal">Cerrar</button>
@@ -77,42 +75,30 @@
   </div>
 
 <!-- Edit Modal -->
-<div class="modal fade" id="updateEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="employeeEditModalLabel" aria-hidden="true">
+<div class="modal fade" id="updateEducacionModal" tabindex="-1" role="dialog" aria-labelledby="updateEducacionModal" aria-hidden="true">
   <div class="modal-dialog" role="document">
      <div class="modal-content">
         <div class="modal-header">
-           <h5 class="modal-title" id="updateEmployeeModalLabel">Edit Employee {{editEmployee?.name}}</h5>
+           <h5 class="modal-title" id="updateEducacionModalLabel">Edit Educacion </h5>
            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
            <span aria-hidden="true">&times;</span>
            </button>
         </div>
         <div class="modal-body">
            <form #editForm="ngForm">
-              <div class="form-group">
-                 <label for="name">Name</label>
-                 <input type="text" ngModel="{{editEmployee?.name}}" name="name" class="form-control" id="name" aria-describedby="emailHelp" placeholder="Name">
-              </div>
-              <input type="hidden" ngModel="{{editEmployee?.id}}" name="id" class="form-control" id="id" placeholder="Email">
-              <input type="hidden" ngModel="{{editEmployee?.employeeCode}}" name="userCode" class="form-control" id="userCode" placeholder="Email">
-              <div class="form-group">
-                 <label for="email">Email Address</label>
-                 <input type="email" ngModel="{{editEmployee?.email}}" name="email" class="form-control" id="email" placeholder="Email">
-              </div>
-              <div class="form-group">
-                 <label for="phone">Job title</label>
-                 <input type="text" ngModel="{{editEmployee?.jobTitle}}" name="jobTitle" class="form-control" id="jobTitle" placeholder="Job title">
-              </div>
-              <div class="form-group">
-                 <label for="phone">Phone</label>
-                 <input type="text" ngModel="{{editEmployee?.phone}}" name="phone" class="form-control" id="phone" name="phone" placeholder="Phone">
-              </div>
-              <div class="form-group">
-                 <label for="phone">Image URL</label>
-                 <input type="text" ngModel="{{editEmployee?.imageUrl}}" name="imageUrl" class="form-control" id="imageUrl" placeholder="Image URL">
-              </div>
-              <div class="modal-footer">
+                <label for="institucion">institucion</label><br>
+                <input ngModel="{{editEducacion?.institucion}} " type="text" name="institucion"  class="form-control">
+                <label for="especialidad">especialidad</label><br>
+                <input ngModel="{{editEducacion?.especialidad}}" type="text" name="especialidad"  class="form-control">
+                <label for="fechaInicio">Fecha de Inicio</label><br>
+                <input ngModel="{{editEducacion?.fechainicio}}" type="text" name="fechaInicio"  class="form-control">
+                <label for="fechafin">Fecha fin</label><br>
+                <input ngModel="{{editEducacion?.fechafin}}" type="text" name="fechafin"  class="form-control">
+                <input type="hidden" ngModel="{{editEducacion?.id}}" name="id"><br>
+
+                <div class="modal-footer">
                  <button type="button" id="" data-dismiss="modal" class="btn btn-secondary">Close</button>
-                 <button (click)="onUpdateEmloyee(editForm.value)" data-dismiss="modal" class="btn btn-primary" >Save changes</button>
+                 <button (click)="onUpdateEducacion(editForm.value)" data-dismiss="modal" class="btn btn-primary" >Save changes</button>
               </div>
            </form>
         </div>
@@ -121,20 +107,20 @@
 </div>
 
 <!-- Delete Modal -->
-<div class="modal fade" id="deleteEmployeeModal" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
+<div class="modal fade" id="deleteEducacionModal" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
      <div class="modal-content">
         <div class="modal-header">
-           <h5 class="modal-title" id="deleteModelLabel">Delete Employee</h5>
+           <h5 class="modal-title" id="deleteModelLabel">Delete Educacion</h5>
            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
            <span aria-hidden="true">&times;</span>
            </button>
         </div>
         <div class="modal-body">
-           <p>Are you sure you want to delete employee {{deleteEmployee?.name}}?</p>
+           <p>Esta acción eliminará {{deleteEducacion?.institucion}}?- ¿Desea continuar?</p>
            <div class="modal-footer">
               <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
-              <button (click)="onDeleteEmloyee(deleteEmployee?.id)" class="btn btn-danger" data-dismiss="modal">Yes</button>
+              <button (click)="onDeleteEducacion(deleteEducacion?.id!)" class="btn btn-danger" data-dismiss="modal">si</button>
            </div>
         </div>
      </div>
