--- a/Front_End/src/app/componentes/educacion/educacion.component.html
+++ b/Front_End/src/app/componentes/educacion/educacion.component.html
@@ -18,16 +18,13 @@
         <div *ngFor="let educacion of educaciones" class="col-md-6 col-xl-3">
             <div class="card m-b-30">
                 <div class="card-body row">
-                    <div class="col-6">
-                        <a href=""><img src="{{educacion?.institucion}}" alt="" class="img-fluid rounded-circle w-60"></a>
+                    <div class="col-9">
+                      <p>{{educacion?.institucion}} - {{educacion?.especialidad}}</p>
                     </div>
-                    <div class="col-6 card-title align-self-center mb-0">
-                        <h5>{{educacion?.especialidad}}</h5>
-                        <p class="m-0">{{educacion?.fechainicio}} - {{educacion?.fechafin}}</p>
+                    <p class="m-0">{{educacion?.fechainicio}} - {{educacion?.fechafin}}</p>
                     </div>
-                </div>
                 <div class="card-body">
-                    <div class="float-right btn-group btn-group-sm">
+                    <div class="float-center btn-group btn-group-sm">
                         <a (click)="onOpenModal(educacion, 'edit')" class="btn btn-primary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
                         <a (click)="onOpenModal(educacion, 'delete')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
                     </div>
