--- a/Front_End/src/app/componentes/home/home.component.html
+++ b/Front_End/src/app/componentes/home/home.component.html
@@ -1,5 +1,5 @@
 <app-header></app-header>
-<app-sobre-mi></app-sobre-mi>
+<app-persona></app-persona>
 <app-experiencia-laboral></app-experiencia-laboral>
 <app-educacion></app-educacion>
 <app-hy-s></app-hy-s>
