--- a/Front_End/src/app/componentes/footer/footer.component.css
+++ b/Front_End/src/app/componentes/footer/footer.component.css
@@ -1,8 +1,8 @@
 .row{
-  background-color: #005086;
+  background-color: #f4d58d;
 }
 footer{
-  color:white;
+
   font-size: 14px;
   display: flex;
   flex-direction: column;
