--- a/Front_End/src/app/componentes/persona/persona.component.html
+++ b/Front_End/src/app/componentes/persona/persona.component.html
@@ -1,18 +1,20 @@
-<div class="container" *ngFor="let persona of personas">
-  <div class="column">
-
-      <div id="eliminar-editar-sobremi">
-          <button (click)="onOpenModal(null!,'add')" type="button" class="botones_contenido">
-              <i class="fa-solid fa-plus"></i>
-          </button>
-          <button (click)="onOpenModal(persona,'edit')" type="button" class="botones_contenido">
-              <i class="fa-solid fa-pen"></i>
-          </button>
-          <button (click)="onOpenModal(persona,'delete')"  type="button" class="botones_contenido">
-              <i class="fa-solid fa-eraser"></i>
-          </button>
-      </div>
-      <h1> {{persona.nombre}}<span id="strong">{{persona.apellido}} </span> </h1>
-
-
+<div class="row" *ngFor="let persona of personas">
+  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
+    <img src="../../../assets/foto vero2.png" class="img-fluid" id="fotodeperfil" />
   </div>
+  <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2"></div>
+  <h1>{{ persona.nombre }} <span id="strong"> {{ persona.apellido }} </span></h1>
+  <h5>{{ persona.sobremi }}</h5>
+
+  <div id="eliminar-editar-sobremi">
+    <button (click)="onOpenModal(null!, 'add')" type="button" class="botones_contenido">
+      <i class="fa-solid fa-plus"></i>
+    </button>
+    <button (click)="onOpenModal(persona, 'edit')" type="button" class="botones_contenido">
+      <i class="fa-solid fa-pen"></i>
+    </button>
+    <button (click)="onOpenModal(persona, 'delete')" type="button" class="botones_contenido">
+      <i class="fa-solid fa-eraser"></i>
+    </button>
+  </div>
+</div>
