--- a/Front_End/src/app/componentes/educacion/educacion.component.css
+++ b/Front_End/src/app/componentes/educacion/educacion.component.css
@@ -2,29 +2,40 @@
 @import 'https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css';
 
 
-body{
-  margin-top:20px;
-  background: #f5f5f5;
+.contenido {
+  font-size: 20px;
+  width: 100%;
+  height: auto;
+  padding: 40px;
+  background-color: #f4d58d;
+
 }
-.card {
-  border: none;
-  -webkit-box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
-  box-shadow: 0 1px 2px 0 rgba(0,0,0,.05);
-  margin-bottom: 30px;
-}
+
+
+
+
+
+/*
 .w-60 {
   width: 60px;
 }
-h1, h2, h3, h4, h5, h6 {
+*/
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
   margin: 0 0 10px;
   font-weight: 600;
   color: black;
 }
+
 .social-links li a {
   -webkit-border-radius: 50%;
-  background-color: rgba(89,206,181,.85);
+  background-color: rgba(247, 157, 132, 0.85);
   border-radius: 50%;
-  color: #005086;
+  color: #f79d84;
   display: inline-block;
   height: 30px;
   line-height: 30px;
@@ -32,6 +43,8 @@ h1, h2, h3, h4, h5, h6 {
   width: 30px;
   font-size: 12px;
 }
+
+
 a {
   color: #707070;
 }
