--- a/Front_End/src/app/componentes/logo-ap/logo-ap.component.html
+++ b/Front_End/src/app/componentes/logo-ap/logo-ap.component.html
@@ -1,7 +1,7 @@
 
 
 <div class="row">
-  <div class="container">
+  <div class="contenido">
     <div class="logo">
       <img src="../../../assets/APLogo.png" id="logoAP">
     </div>
