--- a/Front_End/src/app/componentes/persona/persona.component.css
+++ b/Front_End/src/app/componentes/persona/persona.component.css
@@ -1,10 +1,14 @@
 .row{
   padding: 20px;
-  color: #F7D6BF
+
 }
 div{
-  background-color: #005086;
+  background-color: #f4d58d;
   text-align: center;
+}
+
+h1{
+  color: #c82333;
 }
 /*Estilo de la foto de perfil*/
 @media (min-width: 576px){
@@ -23,7 +27,7 @@ div{
       position: absolute;
       width: 28%;
       border-radius: 50%;
-      box-shadow: 3px 3px 3px #005086;
+      box-shadow: 3px 3px 3px #f4d58d;
       left: 33%;
       top:310px;
   }
