--- a/Front_End/src/app/componentes/persona/persona.component.html
+++ b/Front_End/src/app/componentes/persona/persona.component.html
@@ -5,16 +5,94 @@
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2"></div>
   <h1>{{ persona.nombre }} <span id="strong"> {{ persona.apellido }} </span></h1>
   <h5>{{ persona.sobremi }}</h5>
+  <div class="card-body">
+  <div class="float-center btn-group btn-group-sm">
+    <a (click)="onOpenModal(null!, 'add')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Agregar"><i class="fa-solid fa-plus"></i></a>
+    <a (click)="onOpenModal(persona, 'edit')" class="btn btn-danger tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
+    <a (click)="onOpenModal(persona, 'delete')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
+  </div>
 
-  <div id="eliminar-editar-sobremi">
-    <button (click)="onOpenModal(null!, 'add')" type="button" class="botones_contenido">
-      <i class="fa-solid fa-plus"></i>
-    </button>
-    <button (click)="onOpenModal(persona, 'edit')" type="button" class="botones_contenido">
-      <i class="fa-solid fa-pen"></i>
-    </button>
-    <button (click)="onOpenModal(persona, 'delete')" type="button" class="botones_contenido">
-      <i class="fa-solid fa-eraser"></i>
-    </button>
   </div>
 </div>
+
+
+<!-- Agregar persona Modal -->
+<div class="modal fade" id="addPersonaModal" tabindex="-1" role="dialog" aria-labelledby="addPersonaModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+       <div class="modal-header">
+          <h5 class="modal-title" id="addPersonaModalLabel">Agregar Persona</h5>
+          <button type="button" class="cerrar" data-dismiss="modal" aria-label="Cerrar">
+          <span aria-hidden="true">&times;</span>
+          </button>
+       </div>
+       <div class="modal-body">
+          <form #addForm="ngForm" (ngSubmit)="onAddPersona(addForm)">
+            <label for="nombre">Nombre</label><br>
+            <input ngModel type="text" name="nombre"  class="form-control">
+            <label for="apellido">Apellido </label><br>
+            <input ngModel type="text" name="apellido"  class="form-control">
+            <label for="sobremi">Sobre Mi</label><br>
+            <input ngModel type="text" name="sobremi"  class="form-control">
+        <div class="modal-footer">
+             <button type="button" id="add-persona-form" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+             <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary" >Guardar cambios</button>
+          </div>
+          </form>
+       </div>
+    </div>
+  </div>
+  </div>
+
+<!-- Edit Modal persona -->
+<div class="modal fade" id="updatePersonaModal" tabindex="-1" role="dialog" aria-labelledby="updatePersonaModal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+     <div class="modal-content">
+        <div class="modal-header">
+           <h5 class="modal-title" id="updatePersonaModalLabel">Editar Persona </h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+           </button>
+        </div>
+        <div class="modal-body">
+           <form #editForm="ngForm">
+                <label for="nombre">Nombre</label><br>
+                <input ngModel="{{editPersona?.nombre}} " type="text" name="nombren"  class="form-control">
+                <label for="apellido">Apellido</label><br>
+                <input ngModel="{{editPersona?.apellido}}" type="text" name="apellido"  class="form-control">
+                <label for="sobremi">Sobre Mi</label><br>
+                <input ngModel="{{editPersona?.sobremi}}" type="text" name="sobremi"  class="form-control">
+                <input type="hidden" ngModel="{{editPersona?.id}}" name="id"><br>
+
+                <div class="modal-footer">
+                 <button type="button" id="" data-dismiss="modal" class="btn btn-secondary">Cancelar</button>
+                 <button (click)="onUpdatePersona(editForm.value)" data-dismiss="modal" class="btn btn-primary" >Guardar</button>
+              </div>
+           </form>
+        </div>
+     </div>
+  </div>
+</div>
+
+<!-- Delete Modal -->
+<div class="modal fade" id="deletePersonaModal" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+     <div class="modal-content">
+        <div class="modal-header">
+           <h5 class="modal-title" id="deleteModelLabel"> Eliminar Persona</h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+           </button>
+        </div>
+        <div class="modal-body">
+           <p>Esta acción eliminará {{deletePersona?.nombre}}?- ¿Desea continuar?</p>
+           <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+              <button (click)="onDeletePersona(deletePersona?.id!)" class="btn btn-danger" data-dismiss="modal">si</button>
+           </div>
+        </div>
+     </div>
+  </div>
+</div>
+
+
