--- a/Front_End/src/app/componentes/educacion/educacion.component.html
+++ b/Front_End/src/app/componentes/educacion/educacion.component.html
@@ -68,16 +68,16 @@
   <div class="modal-dialog" role="document">
      <div class="modal-content">
         <div class="modal-header">
-           <h5 class="modal-title" id="updateEducacionModalLabel">Edit Educacion </h5>
+           <h5 class="modal-title" id="updateEducacionModalLabel">Editar Educacion </h5>
            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
            <span aria-hidden="true">&times;</span>
            </button>
         </div>
         <div class="modal-body">
            <form #editForm="ngForm">
-                <label for="institucion">institucion</label><br>
+                <label for="institucion">Institucion</label><br>
                 <input ngModel="{{editEducacion?.institucion}} " type="text" name="institucion"  class="form-control">
-                <label for="especialidad">especialidad</label><br>
+                <label for="especialidad">Especialidad</label><br>
                 <input ngModel="{{editEducacion?.especialidad}}" type="text" name="especialidad"  class="form-control">
                 <label for="fechaInicio">Fecha de Inicio</label><br>
                 <input ngModel="{{editEducacion?.fechainicio}}" type="text" name="fechaInicio"  class="form-control">
@@ -100,7 +100,7 @@
   <div class="modal-dialog" role="document">
      <div class="modal-content">
         <div class="modal-header">
-           <h5 class="modal-title" id="deleteModelLabel">Delete Educacion</h5>
+           <h5 class="modal-title" id="deleteModelLabel"> Eliminar Educacion</h5>
            <button type="button" class="close" data-dismiss="modal" aria-label="Close">
            <span aria-hidden="true">&times;</span>
            </button>
