--- a/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
+++ b/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
@@ -1,110 +1,120 @@
-<div class="fondo">
-  <div class="contenido" id="main-container">
-      <div id="experiencia">
-          <h4 class="experiencia">Experiencia Laboral <button (click)="onOpenModal(null!,'add')" type="button" class="botones_contenido">
-              <i class="fa-solid fa-plus"></i>
-          </button></h4>
-      </div>
-      <div class="listaempleos" *ngFor="let experiencia of experiencias">
-          <div class="listatraempleos1">
-              <p class="nombreempresa"><span class="titulo">{{experiencia.empresa}}</span> - {{experiencia.cargo}}</p>
-              <p>{{experiencia?.fechaIngreso}} / {{experiencia?.fechaEgreso}} </p>
-          </div>
-          <div id="eliminar-editar-trabajos">
-              <button (click)="onOpenModal(experiencia,'edit')" type="button" class="botones_contenido">
-                  <i class="fa-solid fa-pen"></i>
-              </button>
-              <button (click)="onOpenModal(experiencia,'delete')" type="button" class="botones_contenido">
-                  <i class="fa-solid fa-eraser"></i>
-              </button>
-          </div>
-      </div>
+<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <a class="navbar-brand" style="color:white;">EXPERIENCIA LABORAL</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
+  <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarColor02">
+     <ul class="navbar-nav mr-auto">
+        <li class="nav-item active">
+           <a class="nav-link" style="cursor: pointer" (click)="onOpenModal(null!, 'add')">Agregar Experiencia <span class="sr-only">(current)</span></a>
+        </li>
+     </ul>
   </div>
-</div>
+</nav>
+
+<div class="contenido" id="main-container">
+    <div class="row">
+        <div *ngFor="let experiencia of experiencia" class="">
+            <div class="column">
+                <div class="listaedu">
+                    <div class="">
+                      <p>{{experiencia.empresa}} - {{experiencia.cargo}}</p>
+                    </div>
+                    <p class="">{{experiencia?.fechaIngreso}} - {{experiencia?.fechaEgreso}}</p>
+                    </div>
+
+                <div class="card-body">
+                    <div class="float-center btn-group btn-group-sm">
+                        <a (click)="onOpenModal(experiencia, 'edit')" class="btn btn-danger tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
+                        <a (click)="onOpenModal(experiencia, 'delete')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
 
 
-     <!-- Modal para agregar Experiencia -->
-<div class="modal fade" id="addExperienciaModal" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="addExperienciaModal" aria-hidden="true">
-  <div class="modal-dialog">
+<!-- Agregar Experiencia Modal -->
+<div class="modal fade" id="addExperienciaModal" tabindex="-1" role="dialog" aria-labelledby="addExperienciaModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
     <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="staticBackdropLabel">Agregar Experiencia</h5>
-        <button type="button" class="close" data-bs-dismiss="modal" aria-label="Cerrar">
+       <div class="modal-header">
+          <h5 class="modal-title" id="addExperienciaModalLabel">Agregar Experiencia</h5>
+          <button type="button" class="cerrar" data-dismiss="modal" aria-label="Cerrar">
           <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-
-      <div class="modal-body">
-        <form #addForm="ngForm" (ngSubmit)="onAddExperiencia(addForm)">
-              <label for="cargo">Cargo</label><br>
-              <input ngModel type="text" name="cargo"  class="form-control">
-              <label for="Empresa">Empresa</label><br>
-              <input ngModel type="text" name="Empresa"  class="form-control">
-              <label for="FechaIngreso">FechaInicio</label><br>
-              <input ngModel type="text" name="FechaIngreso"  class="form-control">
-              <label for="FechaEgreso">FechaEgreso</label><br>
-              <input ngModel type="text" name="FechaEgreso"  class="form-control">
+          </button>
+       </div>
+       <div class="modal-body">
+          <form #addForm="ngForm" (ngSubmit)="onAddExperiencia(addForm)">
+            <label for="empresa">Lugar donde trabajaste</label><br>
+            <input ngModel type="text" name="empresa"  class="form-control">
+            <label for="cargo">Tu cargo </label><br>
+            <input ngModel type="text" name="cargo"  class="form-control">
+            <label for="FechaIngreso">Fecha de Ingreso</label><br>
+            <input ngModel type="text" name="FechaIngreso"  class="form-control">
+            <label for="FechaEgreso">Fecha de Egreso</label><br>
+            <input ngModel type="text" name="FechaEgreso"  class="form-control">
         <div class="modal-footer">
-          <button  type="button" id="add-experiencia-modal" class="btn" data-dismiss="modal">Cancelar</button>
-          <button [disabled]="addForm.invalid" type="submit" class="btn">Agregar</button>
-      </div>
-    </form>
+             <button type="button" id="add-experiencia-form" class="btn btn-secondary" data-dismiss="modal">Cancelar</button>
+             <button [disabled]="addForm.invalid" type="submit" class="btn btn-primary" >Guardar cambios</button>
+          </div>
+          </form>
+       </div>
     </div>
   </div>
-</div>
-</div>
+  </div>
 
+<!-- Edit Modal Experiencia-->
+<div class="modal fade" id="updateExperienciaModal" tabindex="-1" role="dialog" aria-labelledby="updateEducacionModal" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+     <div class="modal-content">
+        <div class="modal-header">
+           <h5 class="modal-title" id="updateExperienciaModalLabel">Editar Experiencia </h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+           </button>
+        </div>
+        <div class="modal-body">
+           <form #editForm="ngForm">
+                <label for="empresa">Empresa</label><br>
+                <input ngModel="{{editExperiencia?.empresa}}" type="text" name="Empresa"  class="form-control">
+                <label for="cargo">Cargo</label><br>
+                <input ngModel="{{editExperiencia?.cargo}}" type="text" name="Cargo"  class="form-control">
+                <label for="fechaIngreso">Fecha de Ingreso</label><br>
+                <input ngModel="{{editExperiencia?.fechaIngreso}}" type="text" name="fechaIngreso"  class="form-control">
+                <label for="fechaEgreso">Fecha de egreso</label><br>
+                <input ngModel="{{editExperiencia?.fechaEgreso}}" type="text" name="fechaEgreso"  class="form-control">
+                <input type="hidden" ngModel="{{editExperiencia?.id}}" name="id"><br>
 
-<!-- Modal para actualizar Experiencia -->
-<div class="modal fade" id="editExperienciaModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="editExperienceModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="editExperienceModalLabel">Editar Experiencia</h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-              </button>
-          </div>
-          <div class="modal-body">
-              <form #editForm="ngForm">
-                  <label for="cargo">cargo</label><br>
-                  <input ngModel="{{editExperiencia?.cargo}} " type="text" name="cargo"  class="form-control"><br>
-                  <label for="Empresa">Empresa</label><br>
-                  <input ngModel="{{editExperiencia?.empresa}}" type="text" name="Empresa"  class="form-control">
-                  <label for="fechaIngreso">Fecha de Igreso</label><br>
-                  <input ngModel="{{editExperiencia?.fechaIngreso}}" type="text" name="fechaIngreso" class="form-control">
-                  <label for="fechaEgreso">Fecha de Egreso</label><br>
-                  <input ngModel="{{editExperiencia?.fechaEgreso}}" type="text" name="fechaEgreso"  class="form-control">
-                  <input type="hidden" name="id" ngModel="{{editExperiencia?.id}} ">
-                  <div class="modal-footer">
-                  <button id="update-experiencia-modal" type="button" class="btn" data-dismiss="modal">Cancelar</button>
-                  <button (click)="onEditExperiencia(editForm.value)" type="button" class="btn" data-dismiss="modal">Guardar cambios</button>
-                  </div>
-              </form>
-          </div>
-
-      </div>
+                <div class="modal-footer">
+                 <button type="button" id="" data-dismiss="modal" class="btn btn-secondary">Cancelar</button>
+                 <button (click)="onUpdateExperiencia(editForm.value)" data-dismiss="modal" class="btn btn-primary" >Guardar</button>
+              </div>
+           </form>
+        </div>
+     </div>
   </div>
 </div>
 
-<!-- Modal para borrar Experiencia -->
-<div class="modal fade" id="deleteExperienciaModal" data-backdrop="static" data-keyboard="false" tabindex="-1" aria-labelledby="deleteExperienciaLabel" aria-hidden="true">
-  <div class="modal-dialog">
-      <div class="modal-content">
-          <div class="modal-header">
-              <h5 class="modal-title" id="staticBackdropLabel"></h5>
-              <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-              </button>
-          </div>
-          <div class="modal-body">
-              <p>Esta acción eliminará  "{{deleteExperiencia?.cargo}}". ¿Desea continuar?</p>
-          </div>
-          <div class="modal-footer">
-          <button type="button" class="btn" data-dismiss="modal">No</button>
-          <button (click)="onDeleteExperiencia(deleteExperiencia.id)" type="button" class="btn" data-dismiss="modal">Sí</button>
-          </div>
-      </div>
+<!-- Delete Modal Experiencia -->
+<div class="modal fade" id="deleteExperienciaModal" tabindex="-1" role="dialog" aria-labelledby="deleteModelLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+     <div class="modal-content">
+        <div class="modal-header">
+           <h5 class="modal-title" id="deleteModelLabel"> Eliminar Experiencia</h5>
+           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+           <span aria-hidden="true">&times;</span>
+           </button>
+        </div>
+        <div class="modal-body">
+           <p>Esta acción eliminará {{deleteExperiencia?.empresa}}?- ¿Desea continuar?</p>
+           <div class="modal-footer">
+              <button type="button" class="btn btn-secondary" data-dismiss="modal">No</button>
+              <button (click)="onDeleteExperiencia(deleteExperiencia?.id!)" class="btn btn-danger" data-dismiss="modal">si</button>
+           </div>
+        </div>
+     </div>
   </div>
 </div>
+</div>
+
 
