--- a/Front_End/src/app/componentes/persona/persona.component.html
+++ b/Front_End/src/app/componentes/persona/persona.component.html
@@ -1,6 +1,6 @@
 <div class="row" *ngFor="let persona of personas">
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
-    <img src="../../../assets/foto vero2.png" class="img-fluid" id="fotodeperfil" />
+    <img src="../../../assets/foto estilo carnet.png" class="img-fluid" id="fotodeperfil" />
   </div>
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2"></div>
   <h1>{{ persona.nombre }} <span id="strong"> {{ persona.apellido }} </span></h1>
