--- a/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
+++ b/Front_End/src/app/componentes/experiencia-laboral/experiencia-laboral.component.html
@@ -6,7 +6,7 @@
   <div class="collapse navbar-collapse" id="navbarColor02">
      <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-           <a class="nav-link" style="cursor: pointer" (click)="onOpenModal(null!, 'add')">Agregar Experiencia <span class="sr-only">(current)</span></a>
+           <a class="nav-link" style="cursor: pointer" *ngIf="isAdmin" (click)="onOpenModal(null!, 'add')">Agregar Experiencia <span class="sr-only">(current)</span></a>
         </li>
      </ul>
   </div>
