--- a/Front_End/src/app/componentes/persona/persona.component.html
+++ b/Front_End/src/app/componentes/persona/persona.component.html
@@ -1,3 +1,5 @@
+
+
 <div class="row" *ngFor="let persona of personas">
   <div class="col-xs-12 col-sm-2 col-md-2 col-lg-2">
     <img src="../../../assets/foto vero2.png" class="img-fluid" id="fotodeperfil" />
@@ -7,7 +9,7 @@
   <h5>{{ persona.sobremi }}</h5>
   <div class="card-body">
   <div class="float-center btn-group btn-group-sm">
-    <a (click)="onOpenModal(null!, 'add')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Agregar"><i class="fa-solid fa-plus"></i></a>
+    <a *ngIf="isAdmin" (click)="onOpenModal(null!, 'add')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Agregar"><i class="fa-solid fa-plus"></i></a>
     <a (click)="onOpenModal(persona, 'edit')" class="btn btn-danger tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Edit"><i class="fa fa-pencil"></i> </a>
     <a (click)="onOpenModal(persona, 'delete')" class="btn btn-secondary tooltips" data-placement="top" data-toggle="tooltip" data-original-title="Delete"><i class="fa fa-times"></i></a>
   </div>
